# eight_sleep_client

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  iteration-1-plan.md  iteration-2-plan.md  plan.md
docs/api_reference/: account.md  alarms.md  app_client.md  appendix.md  audio.md  autopilot.md  bed_base.md  device.md  device_compatibility.md  household.md  infrastructure.md  jet_lag.md  sleep_analytics.md  sleep_features.md  temperature.md  user.md
eight_sleep_client/: __init__.py  client.py  session.py  utils.py
eight_sleep_client/api/: authenticator.py  constants.py  exceptions.py
eight_sleep_client/models/: alarm.py  settings.py  token.py  user_info.py
eight_sleep_client/repositories/: alarm_repository.py
tests/: conftest.py  helpers.py  test_client.py  test_session.py  test_utils.py
tests/api/: test_authenticator.py
tests/models/: test_alarm.py  test_token.py  test_user_info.py
tests/repositories/: test_alarm_repository.py
