[project]
name = "eight-sleep-client"
version = "0.1.0"
description = "Async Python client for the Eight Sleep Pod API"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
test = ["mockito>=2.0", "pytest>=8.0", "pytest-asyncio>=0.24", "pytest-watch>=4.2", "respx>=0.21", "time-machine>=2.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
